<resources>
    <string name="app_name">OSRS Buddy</string>
    <string name="logo">OSRS Buddy logo</string>
    <string name="copyright">AHDesigns&#169; Copyright&#160;</string>
    <string name="version">Version :&#160;</string>
    <string name="update">update</string>
    <string name="hiscores_version">Hiscores version</string>
    <string name="bar_option">What are you smithing?</string>
    <string name="include_smelting">Include smelting bars?</string>
    <string name="bonuses">Bonuses</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="text_0">0</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_10">10</string>
    <string name="text_11">11</string>
    <string name="text_12">12</string>
    <string name="text_13">13</string>
    <string name="text_14">14</string>
    <string name="text_15">15</string>
    <string name="text_16">16</string>
    <string name="text_17">17</string>
    <string name="text_18">18</string>
    <string name="text_19">19</string>
    <string name="text_20">20</string>
    <string name="text_21">21</string>
    <string name="text_22">22</string>
    <string name="text_23">23</string>
    <string name="text_24">24</string>
    <string name="text_25">25</string>
    <string name="text_26">26</string>
    <string name="text_27">27</string>
    <string name="text_28">28</string>
    <string name="text_29">29</string>
    <string name="text_30">30</string>
    <string name="text_31">31</string>
    <string name="text_32">32</string>
    <string name="text_33">33</string>
    <string name="text_34">34</string>
    <string name="text_35">35</string>
    <string name="text_36">36</string>
    <string name="text_37">37</string>
    <string name="text_38">38</string>
    <string name="text_39">39</string>
    <string name="text_40">40</string>
    <string name="text_41">41</string>
    <string name="text_42">42</string>
    <string name="text_43">43</string>
    <string name="text_44">44</string>
    <string name="text_45">45</string>
    <string name="text_46">46</string>
    <string name="text_47">47</string>
    <string name="text_48">48</string>
    <string name="text_49">49</string>
    <string name="text_50">50</string>
    <string name="text_51">51</string>
    <string name="text_52">52</string>
    <string name="text_53">53</string>
    <string name="text_54">54</string>
    <string name="text_55">55</string>
    <string name="text_56">56</string>
    <string name="text_57">57</string>
    <string name="text_58">58</string>
    <string name="text_59">59</string>
    <string name="text_60">60</string>
    <string name="text_61">61</string>
    <string name="text_62">62</string>
    <string name="text_63">63</string>
    <string name="text_64">64</string>
    <string name="text_65">65</string>
    <string name="text_66">66</string>
    <string name="text_67">67</string>
    <string name="text_68">68</string>
    <string name="text_69">69</string>
    <string name="text_70">70</string>
    <string name="text_71">71</string>
    <string name="text_72">72</string>
    <string name="text_73">73</string>
    <string name="text_74">74</string>
    <string name="text_75">75</string>
    <string name="text_76">76</string>
    <string name="text_77">77</string>
    <string name="text_78">78</string>
    <string name="text_79">79</string>
    <string name="text_80">80</string>
    <string name="text_81">81</string>
    <string name="text_82">82</string>
    <string name="text_83">83</string>
    <string name="text_84">84</string>
    <string name="text_85">85</string>
    <string name="text_86">86</string>
    <string name="text_87">87</string>
    <string name="text_88">88</string>
    <string name="text_89">89</string>
    <string name="text_90">90</string>
    <string name="text_91">91</string>
    <string name="text_92">92</string>
    <string name="text_93">93</string>
    <string name="text_94">94</string>
    <string name="text_95">95</string>
    <string name="text_96">96</string>
    <string name="text_97">97</string>
    <string name="text_98">98</string>
    <string name="text_99">99</string>
    <string name="text_max">Max</string>
    <string name="main_header">Welcome</string>
    <string name="price">Price Checker</string>
    <string name="stats">Player Stats</string>
    <string name="calculator">Skill Calculator</string>
    <string name="quests">Quests</string>
    <string name="maps">Maps</string>
    <string name="rss">Runescape News</string>
    <string name="search_ge_header">Search the Grand Exchange</string>
    <string name="search_ge_eg">e.g. Old school bond</string>
    <string name="price_iteminfo">Item info</string>
    <string name="price_itemicon">Item icon</string>
    <string name="price_p2p">Members</string>
    <string name="price_description">&#160;Description</string>
    <string name="price_current">&#160;Current price</string>
    <string name="changes">&#160;Price changes</string>
    <string name="change_today">&#160;Today</string>
    <string name="change_1_month">&#160;1 Month</string>
    <string name="change_3_month">&#160;3 Month</string>
    <string name="change_6_month">&#160;6 Month</string>
    <string name="alch_prices">&#160;Alchemy prices</string>
    <string name="high_alch">&#160;High alch</string>
    <string name="low_alch">&#160;Low alch</string>
    <string name="hiscore_header">Hiscores</string>
    <string name="stats_header">Search Player Stats</string>
    <string name="stats_searcheg">e.g. Lynx Titan</string>
    <string name="chat_head">Chat Head</string>
    <string name="combat_level">Combat level:&#160;</string>
    <string name="combat_style">Combat style:&#160;</string>
    <string name="text">-</string>
    <string name="skill">Skill</string>
    <string name="level">Level</string>
    <string name="rank">Rank</string>
    <string name="exp">XP</string>
    <string name="activity">Activity</string>
    <string name="score">Score</string>
    <string name="overall">Overall</string>
    <string name="attack">&#160;Attack</string>
    <string name="defence">&#160;Defence</string>
    <string name="strength">&#160;Strength</string>
    <string name="hitpoints">&#160;Hitpoints</string>
    <string name="ranged">&#160;Ranged</string>
    <string name="prayer">&#160;Prayer</string>
    <string name="magic">&#160;Magic</string>
    <string name="cooking">&#160;Cooking</string>
    <string name="woodcutting">&#160;Woodcutting</string>
    <string name="fletching">&#160;Fletching</string>
    <string name="fishing">&#160;Fishing</string>
    <string name="firemaking">&#160;Firemaking</string>
    <string name="crafting">&#160;Crafting</string>
    <string name="smithing">&#160;Smithing</string>
    <string name="mining">&#160;Mining</string>
    <string name="herblore">&#160;Herblore</string>
    <string name="agility">&#160;Agility</string>
    <string name="thieving">&#160;Thieving</string>
    <string name="slayer">&#160;Slayer</string>
    <string name="farming">&#160;Farming</string>
    <string name="runecraft">&#160;Runecraft</string>
    <string name="hunter">&#160;Hunter</string>
    <string name="construction">&#160;Construction</string>
    <string name="league">&#160;League Points</string>
    <string name="bhh">&#160;Bounty Hunter - Hunter</string>
    <string name="bhr">&#160;Bounty Hunter - Rogue</string>
    <string name="csa">&#160;Clue Scrolls (all)</string>
    <string name="csb">&#160;Clue Scrolls (beginner)</string>
    <string name="cse">&#160;Clue Scrolls (easy)</string>
    <string name="csm">&#160;Clue Scrolls (medium)</string>
    <string name="csh">&#160;Clue Scrolls (hard)</string>
    <string name="csel">&#160;Clue Scrolls (elite)</string>
    <string name="csma">&#160;Clue Scrolls (master)</string>
    <string name="lms">&#160;LMS - Rank</string>
    <string name="zeal">&#160;Soul Wars Zeal</string>
    <string name="sire">&#160;Abyssal Sire</string>
    <string name="hydra">&#160;Alchemical Hydra</string>
    <string name="barrows">&#160;Barrows Chests</string>
    <string name="bryophyta">&#160;Bryophyta</string>
    <string name="callisto">&#160;Callisto</string>
    <string name="cerberus">&#160;Cerberus</string>
    <string name="cox">&#160;Chambers of Xeric</string>
    <string name="coxcm">&#160;Chambers of Xeric: Challenge Mode</string>
    <string name="elemental">&#160;Chaos Elemental</string>
    <string name="fanatic">&#160;Chaos Fanatic</string>
    <string name="zilyana">&#160;Commander Zilyana</string>
    <string name="corporeal">&#160;Corporeal Beast</string>
    <string name="carchaeologist">&#160;Crazy Archaeologist</string>
    <string name="prime">&#160;Dagannoth Prime</string>
    <string name="rex">&#160;Dagannoth Rex</string>
    <string name="supreme">&#160;Dagannoth Supreme</string>
    <string name="darchaeologist">&#160;Deranged Archaeologist</string>
    <string name="graardor">&#160;General Graardor</string>
    <string name="mole">&#160;Giant Mole</string>
    <string name="guardians">&#160;Grotesque Guardians</string>
    <string name="hespori">&#160;Hespori</string>
    <string name="kqueen">&#160;Kalphite Queen</string>
    <string name="kbd">&#160;King Black Dragon</string>
    <string name="kraken">&#160;Kraken</string>
    <string name="kree">&#160;Kree\'Arra</string>
    <string name="kril">&#160;K\'ril Tsutsaroth</string>
    <string name="mimic">&#160;Mimic</string>
    <string name="nightmare">&#160;Nightmare</string>
    <string name="obor">&#160;Obor</string>
    <string name="sarachnis">&#160;Sarachnis</string>
    <string name="scorpia">&#160;Scorpia</string>
    <string name="skotizo">&#160;Skotizo</string>
    <string name="temp">&#160;Tempoross</string>
    <string name="gauntlet">&#160;The Gauntlet</string>
    <string name="cgauntlet">&#160;The Corrupted Gauntlet</string>
    <string name="tob">&#160;Theatre of Blood</string>
    <string name="tsd">&#160;Thermonuclear Smoke Devil</string>
    <string name="zuk">&#160;TzKal-Zuk</string>
    <string name="jad">&#160;TzTok-Jad</string>
    <string name="venenatis">&#160;Venenatis</string>
    <string name="vetion">&#160;Vet\'ion</string>
    <string name="vorkath">&#160;Vorkath</string>
    <string name="wintertodt">&#160;Wintertodt</string>
    <string name="zalcano">&#160;Zalcano</string>
    <string name="zulrah">&#160;Zulrah</string>
    <string-array name="hiscore_versions">
        <item>Normal</item>
        <item>Ironman</item>
        <item>Ultimate Ironman</item>
        <item>Hardcore Ironman</item>
        <item>Deadman mode</item>
        <item>Leagues</item>
        <item>Tournament</item>
    </string-array>
    <string-array name="bar_versions">
        <item>Smelting only</item>
        <item>Bronze</item>
        <item>Iron</item>
        <item>Steel</item>
        <item>Mithril</item>
        <item>Adamant</item>
        <item>Rune</item>
    </string-array>
    <string name="calculator_header">Skill Calculator</string>
    <string name="bonus_prospect">Prospector Kit (+2.5% exp)</string>
    <string name="bonus_pyro">Pyromancer Outfit (+2.5% exp)</string>
    <string name="bonus_lumber">Lumberjack Outfit (+2.5% exp)</string>
    <string name="bonus_artisan">Relic: Eye of the Artisan (200% xp)</string>
    <string name="bonus_gatherer">Relic: Gift of the Gatherer (200% xp)</string>
    <string name="bonus_wisdom">Relic: Xeric\'s Wisdom (200% xp)</string>
    <string name="current_level">Current Level:&#160;</string>
    <string name="next_level">Next Level:&#160;</string>
    <string name="xp_left">XP Left:&#160;</string>
    <string name="text_product">Product</string>
</resources>