<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainScreen">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/Theme.AppCompat" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewVersion"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_end"
                android:text="@string/version"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/app_icon"
                android:contentDescription="@string/logo" />

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/search_ge"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:onClick="priceActivity"
                android:text="@string/price"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/stats"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:onClick="statActivity"
                android:text="@string/stats"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/calculator"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:onClick="calculatorActivity"
                android:text="@string/calculator"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:id="@+id/textViewCopyright"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:text="@string/copyright"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>