<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/skillcalculatordetailsscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackground">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black_20"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/Theme.AppCompat.Light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calculatorHeader"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:layout_marginTop="@dimen/layout_margin_top">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calculatorChat">

                <ImageView
                    android:contentDescription="@string/chat_head"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/chatHead"
                    android:layout_marginEnd="@dimen/layout_margin_end"
                    android:layout_marginStart="@dimen/layout_margin_start"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/calculatorScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/calculatorChat"
                android:layout_centerVertical="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/calculatorLevels">

                    <TextView
                        android:id="@+id/currentLevelHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/layout_margin_bottom"
                        android:textColor="@android:color/white"
                        android:text="@string/current_level"
                        android:textSize="@dimen/page_text_size"/>

                    <TextView
                        android:layout_toEndOf="@id/currentLevelHeader"
                        android:id="@+id/currentLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/layout_margin_bottom"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/page_text_size"/>

                    <TextView
                        android:id="@+id/nextLevelHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/currentLevelHeader"
                        android:layout_marginBottom="@dimen/layout_margin_bottom"
                        android:textColor="@android:color/white"
                        android:text="@string/next_level"
                        android:textSize="@dimen/page_text_size"/>

                    <TextView
                        android:layout_toEndOf="@id/nextLevelHeader"
                        android:id="@+id/nextLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/currentLevel"
                        android:layout_marginBottom="@dimen/layout_margin_bottom"
                        android:textColor="@android:color/white"
                        android:text="@string/text_0"
                        android:textSize="@dimen/page_text_size"/>

                    <TextView
                        android:id="@+id/xpLeftHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/nextLevelHeader"
                        android:layout_marginBottom="@dimen/layout_margin_bottom"
                        android:textColor="@android:color/white"
                        android:text="@string/xp_left"
                        android:textSize="@dimen/page_text_size"/>

                    <TextView
                        android:layout_toEndOf="@id/xpLeftHeader"
                        android:id="@+id/nextXP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/nextLevel"
                        android:layout_marginBottom="@dimen/layout_margin_bottom"
                        android:textColor="@android:color/white"
                        android:text="@string/text_0"
                        android:textSize="@dimen/page_text_size"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/calculatorItems"
                    android:layout_below="@+id/calculatorLevels">
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>